tmp/runners/converge/logs/run-20260428-045041/R02.failure.txt
Verification failed for command: cargo check -p roko-cli

Recent log tail:
 3 | | use std::process::Command;
...  |
55 | |     println!("cargo:rerun-if-changed=../../demo/demo-app/tsconfig.json");
56 | | }
   | |_^
   |
   = note: requested on the command line with `-W missing-docs`

warning: `roko-serve` (build script) generated 1 warning
   Compiling roko-cli v0.1.0 (/Users/will/dev/nunchi/roko/roko/.roko/worktrees/converge-run-20260428-045041/crates/roko-cli)
error[E0433]: cannot find `orchestrate` in `super`
  --> crates/roko-cli/src/knowledge_helpers.rs:52:38
   |
52 |     if let Some(crate_name) = super::orchestrate::task_crate_name(task_def) {
   |                                      ^^^^^^^^^^^ could not find `orchestrate` in the crate root
   |
note: found an item that was configured out
  --> crates/roko-cli/src/lib.rs:77:9
   |
76 | #[cfg(feature = "legacy-orchestrate")]
   |       ------------------------------ the item is gated behind the `legacy-orchestrate` feature
77 | pub mod orchestrate;
   |         ^^^^^^^^^^^

error[E0433]: cannot find `orchestrate` in `super`
   --> crates/roko-cli/src/learning_helpers.rs:311:33
    |
311 |     let overrides_path = super::orchestrate::static_overrides_path(workdir);
    |                                 ^^^^^^^^^^^ could not find `orchestrate` in the crate root
    |
note: found an item that was configured out
   --> crates/roko-cli/src/lib.rs:77:9
    |
 76 | #[cfg(feature = "legacy-orchestrate")]
    |       ------------------------------ the item is gated behind the `legacy-orchestrate` feature
 77 | pub mod orchestrate;
    |         ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0433`.
error: could not compile `roko-cli` (lib) due to 2 previous errors
